fixed buttons on mobile

--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ body {
   background-color: #eee;
   color: #151d3b;
   margin: 0;
-  font-size: 16px;
+  font-size: 17px;
 }
 
 a {
